This resolves some issues with upgrading to MacOS 10.10 (Yosemite).  First, it replaces deprecated Cocoa items, like “NSOKButton”, “NSImage -setScalesWhenResized”, and “NSWindow -convertScreenToBase”, with more up-to-date equivalents.  It also forces the makefiles to check for X11 and OpenGL headers and libraries in both /opt/X11 and /usr/X11R6.
git-svn-id: https://tricklab.jsc.nasa.gov/svn/repos/dcapp/trunk@50 caffc767-fac6-498e-a973-f5283f39b8c3

--- a/TaraDraw/x11/Makefile
+++ b/TaraDraw/x11/Makefile
@@ -12,7 +12,7 @@ $(LIBDIR)/libTD.a: $(BLD_OBJECTS)
 
 $(OBJDIR)/%.o: %.cc $(HEADERS)
 	mkdir -p $(OBJDIR)
-	$(CC) $(CFLAGS) -I/usr/X11R6/include -c $< -o $@
+	$(CC) $(CFLAGS) $(X11_CFLAG) -c $< -o $@
 
 clean:
 	rm -rf $(OBJDIR)
