--- a/imgload/Makefile
+++ b/imgload/Makefile
@@ -3,17 +3,14 @@ include ../makedefs
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-COMP_FLAGS := -I/usr/X11R6/include
-ARCH_FLAGS := 
-
 $(LIBDIR)/libimgload.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
-	$(AR) $(ARFLAGS) $(ARCH_FLAGS) $@ $^
+	$(AR) $(ARFLAGS) $@ $^
 	ranlib $@
 
 $(OBJDIR)/%.o: %.cc $(HEADERS)
 	mkdir -p $(OBJDIR)
-	$(CC) $(CFLAGS) $(COMP_FLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) $(X11_CFLAG) -c $< -o $@
 
 clean:
 	rm -rf $(OBJDIR)
