Pushed the Trick and EDGE support files into their respective 3rdParty directories.  Doing so cleanly involved breaking out alignment and color typedefs into files independent of the nodes.hh/Object.hh monstrosity, which is a good thing.
git-svn-id: https://tricklab.jsc.nasa.gov/svn/repos/dcapp/trunk@109 caffc767-fac6-498e-a973-f5283f39b8c3

--- a/3rdParty/trick/Makefile
+++ b/3rdParty/trick/Makefile
@@ -1,5 +1,29 @@
-.PHONY: all clean
+.PHONY: clean
 
-all:
+OBJDIR := $(shell ./PkgInfo --objdir)
+LIBDIR := $(shell ./PkgInfo --libdir)
+
+HEADERS := $(wildcard *.hh)
+SOURCES := trickcomm.cc
+ifneq ($(shell which trick-gte 2> /dev/null),)
+    SOURCES += vscomm.cc
+    CXXFLAGS += -DTRICKACTIVE -DTRICK16PLUS -I$(shell trick-gte TRICK_HOME)/include
+else ifneq ($(shell which gte 2> /dev/null),)
+    SOURCES += vscomm.cc
+    CXXFLAGS += -DTRICKACTIVE -I$(shell gte TRICK_HOME)/trick_source
+endif
+OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(SOURCES)), $(OBJDIR)/$(obj))
+
+CXXFLAGS += -Wall -I../.. $(shell ../../packages/utils/PkgInfo --cflags)
+
+$(LIBDIR)/libTrickComm.a: $(OBJECTS)
+	mkdir -p $(LIBDIR)
+	$(AR) $(ARFLAGS) $@ $^
+
+$(OBJDIR)/%.o: %.cc $(HEADERS)
+	mkdir -p $(OBJDIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
+	rm -rf $(OBJDIR)
+	rm -rf $(LIBDIR)
