Fixed a bug that would prevent dcapp from properly building on Trick 15 and lower.  Also, renamed the PkgInfo files to use the more standard <packagename>-config naming syntax.
git-svn-id: https://tricklab.jsc.nasa.gov/svn/repos/dcapp/trunk@110 caffc767-fac6-498e-a973-f5283f39b8c3

--- a/3rdParty/can/Makefile
+++ b/3rdParty/can/Makefile
@@ -1,17 +1,17 @@
 .PHONY: clean
 
-OBJDIR := $(shell ./PkgInfo --objdir)
-LIBDIR := $(shell ./PkgInfo --libdir)
+OBJDIR := $(shell ./CanPlugin-config --objdir)
+LIBDIR := $(shell ./CanPlugin-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall $(shell ../../packages/utils/PkgInfo --cflags)
+CXXFLAGS += -Wall $(shell ../../packages/utils/utils-config --cflags)
 ifdef CANBUS_HOME
     CXXFLAGS += -DNTCAN -I$(CANBUS_HOME)
 endif
 
-$(LIBDIR)/libCAN.a: $(OBJECTS)
+$(LIBDIR)/libCanPlugin.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
 	$(AR) $(ARFLAGS) $@ $^
 
