--- a/3rdParty/ccsds/Makefile
+++ b/3rdParty/ccsds/Makefile
@@ -1,17 +1,17 @@
 .PHONY: clean
 
-OBJDIR := $(shell ./PkgInfo --objdir)
-LIBDIR := $(shell ./PkgInfo --libdir)
+OBJDIR := $(shell ./CcsdsPlugin-config --objdir)
+LIBDIR := $(shell ./CcsdsPlugin-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall -I../.. $(shell ../../packages/utils/PkgInfo --cflags)
+CXXFLAGS += -Wall -I../.. $(shell ../../packages/utils/utils-config --cflags)
 ifdef CCSDS_UDP_HOME
     CXXFLAGS += -DCCSDSUDPACTIVE -I$(CCSDS_UDP_HOME)
 endif
 
-$(LIBDIR)/libCcsdsUdpComm.a: $(OBJECTS)
+$(LIBDIR)/libCcsdsPlugin.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
 	$(AR) $(ARFLAGS) $@ $^
 
