--- a/3rdParty/trick/Makefile
+++ b/3rdParty/trick/Makefile
@@ -1,7 +1,7 @@
 .PHONY: clean
 
-OBJDIR := $(shell ./PkgInfo --objdir)
-LIBDIR := $(shell ./PkgInfo --libdir)
+OBJDIR := $(shell ./TrickPlugin-config --objdir)
+LIBDIR := $(shell ./TrickPlugin-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 SOURCES := trickcomm.cc
@@ -14,9 +14,9 @@ else ifneq ($(shell which gte 2> /dev/null),)
 endif
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(SOURCES)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall -I../.. $(shell ../../packages/utils/PkgInfo --cflags)
+CXXFLAGS += -Wall -I../.. $(shell ../../packages/utils/utils-config --cflags)
 
-$(LIBDIR)/libTrickComm.a: $(OBJECTS)
+$(LIBDIR)/libTrickPlugin.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
 	$(AR) $(ARFLAGS) $@ $^
 
