This moves the PixelStream stuff into a nice, self-contained package.  I should be done re-packaging dcapp for a while.
git-svn-id: https://tricklab.jsc.nasa.gov/svn/repos/dcapp/trunk@112 caffc767-fac6-498e-a973-f5283f39b8c3

--- a/packages/Makefile
+++ b/packages/Makefile
@@ -1,15 +1,16 @@
+.NOTPARALLEL:
 .PHONY: all clean
 
 all: $(PACKAGES)
-	${MAKE} -C PixelStream
+	${MAKE} -C utils
 	${MAKE} -C TaraDraw
+	${MAKE} -C PixelStream
 	${MAKE} -C fontlib
 	${MAKE} -C imgload
-	${MAKE} -C utils
 
 clean: $(PACKAGESCLEAN)
-	${MAKE} -C PixelStream clean
+	${MAKE} -C utils clean
 	${MAKE} -C TaraDraw clean
+	${MAKE} -C PixelStream clean
 	${MAKE} -C fontlib clean
 	${MAKE} -C imgload clean
-	${MAKE} -C utils clean
