Jason Harvey discovered that the dcapp samples don’t build correctly if DCAPP_HOME isn’t set and if $DCAPP_HOME/dcapp.app/Contents isn’t in the user’s PATH.  This fixes that issue, and it adds a sample TaraDraw application.  Good catch Jason.
git-svn-id: https://tricklab.jsc.nasa.gov/svn/repos/dcapp/trunk@116 caffc767-fac6-498e-a973-f5283f39b8c3

--- a/samples/demo/logic/Makefile
+++ b/samples/demo/logic/Makefile
@@ -1,5 +1,7 @@
 .PHONY: clean
 
+DCAPP_HOME ?= $(abspath $(dir $(lastword $(MAKEFILE_LIST)))/../../..)
+
 ifneq ($(wildcard ${DCAPP_HOME}/dcapp.app/Contents/dcapp_genheader),)
     GENHEADER := ${DCAPP_HOME}/dcapp.app/Contents/dcapp_genheader
 else
