This does a couple of things: (1) it moves all of the *-config files into bin directories, which is the consensus location for such files, and (2) it lays the foundation for finally replacing my old C-style link list with C++-style classes for the display primitives.
git-svn-id: https://tricklab.jsc.nasa.gov/svn/repos/dcapp/trunk@117 caffc767-fac6-498e-a973-f5283f39b8c3

--- a/3rdParty/can/Makefile
+++ b/3rdParty/can/Makefile
@@ -1,12 +1,12 @@
 .PHONY: clean
 
-OBJDIR := $(shell ./CanPlugin-config --objdir)
-LIBDIR := $(shell ./CanPlugin-config --libdir)
+OBJDIR := $(shell ./bin/CanPlugin-config --objdir)
+LIBDIR := $(shell ./bin/CanPlugin-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall $(shell ../../packages/utils/utils-config --cflags)
+CXXFLAGS += -Wall $(shell ../../packages/utils/bin/utils-config --cflags)
 ifdef CANBUS_HOME
     CXXFLAGS += -DNTCAN -I$(CANBUS_HOME)
 endif
