--- a/packages/PixelStream/samples/Makefile
+++ b/packages/PixelStream/samples/Makefile
@@ -1,16 +1,16 @@
 .PHONY: clean
 
-OSSPEC := $(shell ../PixelStream-config --osspec)
-BINDIR := $(shell ../PixelStream-config --bindir)
+OSSPEC := $(shell ../bin/PixelStream-config --osspec)
+BINDIR := $(shell ../bin/PixelStream-config --bindir)
 
 CXXFLAGS += -Wall
-CXXFLAGS += $(shell ../PixelStream-config --cflags)
-CXXFLAGS += $(shell ../../TaraDraw/TaraDraw-config --cflags)
-CXXFLAGS += $(shell ../../utils/utils-config --cflags)
+CXXFLAGS += $(shell ../bin/PixelStream-config --cflags)
+CXXFLAGS += $(shell ../../TaraDraw/bin/TaraDraw-config --cflags)
+CXXFLAGS += $(shell ../../utils/bin/utils-config --cflags)
 
-LINK_LIBS += $(shell ../PixelStream-config --libs)
-LINK_LIBS += $(shell ../../TaraDraw/TaraDraw-config --libs)
-LINK_LIBS += $(shell ../../utils/utils-config --libs)
+LINK_LIBS += $(shell ../bin/PixelStream-config --libs)
+LINK_LIBS += $(shell ../../TaraDraw/bin/TaraDraw-config --libs)
+LINK_LIBS += $(shell ../../utils/bin/utils-config --libs)
 
 ifeq ($(OSSPEC), MacOS)
     CXXFLAGS += -I/opt/X11/include
