--- a/packages/PixelStream/Makefile
+++ b/packages/PixelStream/Makefile
@@ -1,13 +1,13 @@
 .NOTPARALLEL:
 .PHONY: all postbuild clean
 
-OBJDIR := $(shell ./PixelStream-config --objdir)
-LIBDIR := $(shell ./PixelStream-config --libdir)
+OBJDIR := $(shell ./bin/PixelStream-config --objdir)
+LIBDIR := $(shell ./bin/PixelStream-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall $(shell ../utils/utils-config --cflags)
+CXXFLAGS += -Wall $(shell ../utils/bin/utils-config --cflags)
 
 all: $(LIBDIR)/libPixelStream.a postbuild
 
