Renamed my "utils" library to "basicutils" to avoid a name conflict in EDGE. Also, standardized the PixelStream initialization routine syntax.

--- a/3rdParty/edge/makefiles/Makefile.plugin
+++ b/3rdParty/edge/makefiles/Makefile.plugin
@@ -6,7 +6,7 @@ COMPILER   := $(CPLUSPLUS)
 BUILD_TYPE := SHARED_PLUGIN
 LIBNAME    := dsp_pixelstream
 INCLUDES   := -I/usr/X11/include -I/opt/X11/include -I..
-LINK_LIBS  := -L/opt/X11/lib $(LIB_VIEWER) $(LIB_DSP) $(LIB_GL) -lpixelstream -lutils
+LINK_LIBS  := -L/opt/X11/lib $(LIB_VIEWER) $(LIB_DSP) $(LIB_GL) -lpixelstream -lbasicutils
 
 include $(DIR_TOP)/src.dist/common.mk
 
