--- a/3rdParty/edge/makefiles/Makefile.basicutils
+++ b/3rdParty/edge/makefiles/Makefile.basicutils
@@ -1,7 +1,7 @@
 DIR_TOP = ../../../..
 
 BUILD_TYPE := STATIC_LIB
-LIBNAME := libutils
+LIBNAME := libbasicutils
 include $(DIR_TOP)/src.dist/common.mk
 
 $(buildtargets)
