--- a/3rdParty/edge/makefiles/Makefile.main
+++ b/3rdParty/edge/makefiles/Makefile.main
@@ -5,7 +5,7 @@
 #
 
 DIR_TOP = ../../..
-SUBDIRS = utils PixelStream TaraDraw plugin samples
+SUBDIRS = basicutils PixelStream TaraDraw plugin samples
 
 include $(DIR_TOP)/src.dist/common.mk
 COMPILER := $(CC)
