--- a/packages/Makefile
+++ b/packages/Makefile
@@ -2,14 +2,14 @@
 .PHONY: all clean
 
 all: $(PACKAGES)
-	${MAKE} -C utils
+	${MAKE} -C basicutils
 	${MAKE} -C TaraDraw
 	${MAKE} -C PixelStream
 	${MAKE} -C fontlib
 	${MAKE} -C imgload
 
 clean: $(PACKAGESCLEAN)
-	${MAKE} -C utils clean
+	${MAKE} -C basicutils clean
 	${MAKE} -C TaraDraw clean
 	${MAKE} -C PixelStream clean
 	${MAKE} -C fontlib clean
