--- a/3rdParty/edge/makefiles/Makefile.TaraDraw
+++ b/3rdParty/edge/makefiles/Makefile.TaraDraw
@@ -4,8 +4,6 @@
 #   Date: 02/13/2007
 #
 
-DIR_TOP = ../../../..
-
 HOST_TYPE ?= $(shell uname)
 
 ifeq ($(HOST_TYPE),Darwin)
@@ -14,6 +12,12 @@ else ifeq ($(HOST_TYPE),Linux)
     SUBDIRS = x11
 endif
 
-include $(DIR_TOP)/src.dist/common.mk
-COMPILER := $(CC)
-$(buildtargets)
+.PHONY: $(SUBDIRS)
+
+all: $(SUBDIRS)
+
+$(SUBDIRS):
+	@ $(MAKE) -C $@
+
+clean:
+	@ for i in $(SUBDIRS); do $(MAKE) -C $$i clean; done
