--- a/3rdParty/edge/makefiles/Makefile.main
+++ b/3rdParty/edge/makefiles/Makefile.main
@@ -4,9 +4,18 @@
 #   Date: 02/13/2007
 #
 
-DIR_TOP = ../../..
 SUBDIRS = basicutils PixelStream TaraDraw plugin samples
 
-include $(DIR_TOP)/src.dist/common.mk
-COMPILER := $(CC)
-$(buildtargets)
+.PHONY: $(SUBDIRS)
+
+all: $(SUBDIRS)
+plugin samples : | basicutils PixelStream TaraDraw
+
+$(SUBDIRS):
+	@ echo ================ $@ ==============
+	@ $(MAKE) -C $@
+
+plugin samples : basicutils PixelStream
+
+clean:
+	@ for i in $(SUBDIRS); do $(MAKE) -C $$i clean; done
