added pixelstream primitives to the new architecture

--- a/primitives/Makefile
+++ b/primitives/Makefile
@@ -7,7 +7,7 @@ LIBDIR := lib_MacOS
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall
+CXXFLAGS += -Wall $(shell ./bin/primitives-config --cflags_internal)
 
 all: $(LIBDIR)/libprimitives.a
 
