Big changes. New architecture mostly works for events and now handles drawing most of the primitives.

--- a/primitives/Makefile
+++ b/primitives/Makefile
@@ -17,7 +17,8 @@ $(LIBDIR)/libprimitives.a: $(OBJECTS)
 
 $(OBJDIR)/%.o: %.cc $(HEADERS)
 	mkdir -p $(OBJDIR)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+#	$(CXX) $(CXXFLAGS) -c $< -o $@  TODO: fix with -config file
+	$(CXX) $(CXXFLAGS) -I/Users/mmcfarla/data/packages/dcapp -I/Users/mmcfarla/data/packages/dcapp/packages -I/opt/X11/include/freetype2 -I/opt/X11/include -c $< -o $@ 
 
 clean:
 	rm -rf $(OBJDIR)
