--- a/primitives/Makefile
+++ b/primitives/Makefile
@@ -1,15 +1,13 @@
-.NOTPARALLEL:
-.PHONY: all clean
+.PHONY: clean
 
-OBJDIR := obj_MacOS
-LIBDIR := lib_MacOS
+OSSPEC := $(shell ./bin/primitives-config --osspec)
+OBJDIR := $(shell ./bin/primitives-config --objdir)
+LIBDIR := $(shell ./bin/primitives-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
 CXXFLAGS += -Wall $(shell ./bin/primitives-config --cflags_internal)
-
-all: $(LIBDIR)/libprimitives.a
 
 $(LIBDIR)/libprimitives.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
