Check $(TRICK_HOME)/bin for trick-gte and gte
This allows dcapp to compile in Trick support when either:

- trick-gte or gte is in PATH
- TRICK_HOME is set

--- a/3rdParty/trick/Makefile
+++ b/3rdParty/trick/Makefile
@@ -5,13 +5,20 @@ LIBDIR := $(shell ./bin/TrickPlugin-config --libdir)
 
 HEADERS := $(wildcard *.hh)
 SOURCES := trickcomm.cc
-ifneq ($(shell which trick-gte 2> /dev/null),)
+
+TRICK_HOME ?= $(or $(dir $(shell which trick-gte 2> /dev/null)), $(dir $(shell which gte 2> /dev/null)))
+TRICK_HOME := $(TRICK_HOME:%/bin/=%)
+
+ifneq (, $(TRICK_HOME))
     SOURCES += vscomm.cc
-    CXXFLAGS += -DTRICKACTIVE -DTRICK16PLUS -I$(shell trick-gte TRICK_HOME)/include
-else ifneq ($(shell which gte 2> /dev/null),)
-    SOURCES += vscomm.cc
-    CXXFLAGS += -DTRICKACTIVE -I$(shell gte TRICK_HOME)/trick_source
+    CXXFLAGS += -DTRICKACTIVE
+    ifneq (, $(wildcard $(TRICK_HOME)/bin/trick-gte))
+        CXXFLAGS +=  -DTRICK16PLUS -I$(TRICK_HOME)/include
+    else
+        CXXFLAGS += -I$(TRICK_HOME)/trick_source
+    endif
 endif
+
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(SOURCES)), $(OBJDIR)/$(obj))
 
 CXXFLAGS += -Wall -I../.. $(shell ../../packages/basicutils/bin/basicutils-config --cflags)
