I removed a bunch of dead code from the TaraDraw library.

--- a/packages/TaraDraw/Makefile
+++ b/packages/TaraDraw/Makefile
@@ -1,15 +1,9 @@
 .PHONY: all clean
 
-OSSPEC := $(shell ./bin/TaraDraw-config --osspec)
-
-ifeq ($(OSSPEC), MacOS)
-    TARA_SUBDIR := mac
-else
-    TARA_SUBDIR := x11
-endif
+SUBDIR := $(shell ./bin/TaraDraw-config --subdir)
 
 all:
-	${MAKE} -C $(TARA_SUBDIR)
+	${MAKE} -C $(SUBDIR)
 
 clean:
-	${MAKE} -C $(TARA_SUBDIR) clean
+	${MAKE} -C $(SUBDIR) clean
