--- a/3rdParty/Makefile
+++ b/3rdParty/Makefile
@@ -1,12 +1,12 @@
 .PHONY: all clean
 
-all: $(PACKAGES)
+all:
 	${MAKE} -C can
 	${MAKE} -C edge
 	${MAKE} -C trick
 	${MAKE} -C uei
 
-clean: $(PACKAGESCLEAN)
+clean:
 	${MAKE} -C can clean
 	${MAKE} -C edge clean
 	${MAKE} -C trick clean
