Added support for Hagstrom bezel.

--- a/3rdParty/Makefile
+++ b/3rdParty/Makefile
@@ -3,11 +3,13 @@
 all:
 	${MAKE} -C can
 	${MAKE} -C edge
+	${MAKE} -C hagstrom
 	${MAKE} -C trick
 	${MAKE} -C uei
 
 clean:
 	${MAKE} -C can clean
 	${MAKE} -C edge clean
+	${MAKE} -C hagstrom clean
 	${MAKE} -C trick clean
 	${MAKE} -C uei clean
