--- a/dcapp.app/Contents/Info.plist
+++ b/dcapp.app/Contents/Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.1.0 alpha</string>
 	<key>CFBundleSignature</key>
 	<string>dcap</string>
 	<key>CFBundleVersion</key>
-	<string>218</string>
+	<string>219</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>© 2020 NASA</string>
 	<key>NSPrincipalClass</key>
