--- a/3rdParty/edge/Makefile
+++ b/3rdParty/edge/Makefile
@@ -6,7 +6,7 @@ LIBDIR := $(shell ./bin/EdgePlugin-config --libdir)
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall -Wextra -I../.. $(shell ../../packages/basicutils/bin/basicutils-config --cflags)
+CXXFLAGS += -std=c++11 -Wall -Wextra -I../.. $(shell ../../packages/basicutils/bin/basicutils-config --cflags)
 
 $(LIBDIR)/libEdgePlugin.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
