Fixed an issue that could cause a crash when running with PixelStreams.

--- a/primitives/Makefile
+++ b/primitives/Makefile
@@ -7,12 +7,13 @@ LIBDIR := $(shell ./bin/primitives-config --libdir)
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -std=c++11 -Wall -Wextra $(shell ./bin/primitives-config --cflags_internal)
-
 SUBPACKAGE_CONFIGS := \
 	../packages/PixelStream/bin/PixelStream-config \
 	../packages/RenderLib/bin/RenderLib-config \
 	../packages/basicutils/bin/basicutils-config
+
+CXXFLAGS += -std=c++11 -Wall -Wextra $(shell ./bin/primitives-config --cflags_internal)
+CXXFLAGS += $(foreach subpackage, $(SUBPACKAGE_CONFIGS), $(shell $(subpackage) --cflags))
 
 COMPDEPENDS := $(wildcard ../*.hh)
 COMPDEPENDS += $(foreach subpackage, $(SUBPACKAGE_CONFIGS), $(shell $(subpackage) --compdepends))
