Fixed a couple of issues that could arise on Linux. Also, commented out nearest-power-of-two conversion by default to improve loading time. Nearest-power-of-two shouldn't be needed with modern graphics cards.

--- a/packages/basicutils/Makefile
+++ b/packages/basicutils/Makefile
@@ -6,7 +6,7 @@ LIBDIR := $(shell ./bin/basicutils-config --libdir)
 HEADERS := $(wildcard *.hh)
 OBJECTS := $(foreach obj, $(patsubst %.cc, %.o, $(wildcard *.cc)), $(OBJDIR)/$(obj))
 
-CXXFLAGS += -Wall -Wextra
+CXXFLAGS += -std=c++11 -Wall -Wextra
 
 $(LIBDIR)/libbasicutils.a: $(OBJECTS)
 	mkdir -p $(LIBDIR)
